@@ -1704,126 +1704,6 @@ name|collection
 expr_stmt|;
 block|}
 block|}
-comment|//a persist core request
-DECL|class|Persist
-specifier|public
-specifier|static
-class|class
-name|Persist
-extends|extends
-name|CoreAdminRequest
-block|{
-DECL|field|fileName
-specifier|protected
-name|String
-name|fileName
-init|=
-literal|null
-decl_stmt|;
-DECL|method|Persist
-specifier|public
-name|Persist
-parameter_list|()
-block|{
-name|action
-operator|=
-name|CoreAdminAction
-operator|.
-name|PERSIST
-expr_stmt|;
-block|}
-DECL|method|setFileName
-specifier|public
-name|void
-name|setFileName
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-block|{
-name|fileName
-operator|=
-name|name
-expr_stmt|;
-block|}
-DECL|method|getFileName
-specifier|public
-name|String
-name|getFileName
-parameter_list|()
-block|{
-return|return
-name|fileName
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getParams
-specifier|public
-name|SolrParams
-name|getParams
-parameter_list|()
-block|{
-if|if
-condition|(
-name|action
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no action specified!"
-argument_list|)
-throw|;
-block|}
-name|ModifiableSolrParams
-name|params
-init|=
-operator|new
-name|ModifiableSolrParams
-argument_list|()
-decl_stmt|;
-name|params
-operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|ACTION
-argument_list|,
-name|action
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|fileName
-operator|!=
-literal|null
-condition|)
-block|{
-name|params
-operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|FILE
-argument_list|,
-name|fileName
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|params
-return|;
-block|}
-block|}
 DECL|class|OverrideLastPublished
 specifier|public
 specifier|static
